--- a/assets/css/paginas/carrinho-page.css
+++ b/assets/css/paginas/carrinho-page.css
@@ -1,30 +1,6 @@
 /* =============================================
-  IMPORTAÇÕES
+  ARQUIVO: assets/css/paginas/carrinho-page.css
 ============================================= */
-@charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
-
-/* =============================================
-  VARIÁVEIS DE CORES (IGUAL FINALIZAR-PEDIDO)
-============================================= */
-:root {
-  --verde-folha: #3A6351;
-  --verde-claro: #A8C686;
-  --marrom-terra: #7B5E42;
-  --bege-areia: #F2E8CF;
-  --branco-neve: #FFFFFF;
-  --cinza-pedra: #4F4F4F;
-}
-
-/* =============================================
-  RESET GLOBAL
-============================================= */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
 
 /* =============================================
   BODY
@@ -43,6 +19,7 @@ body {
 .carrinho-container {
   max-width: 1100px;
   margin: auto;
+  margin-top: 10px;
   background-color: var(--branco-neve);
   border-radius: 14px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
@@ -56,39 +33,6 @@ body {
 /* =============================================
   CABEÇALHO
 ============================================= */
-/* Cabeçalho fixo igual ao produtos.html */
-header {
-  background-color: var(--verde-folha);
-  color: var(--branco-neve);
-  padding: 1rem 2rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-  border-radius: 0px 0px 10px 10px;
-}
-
-header .logo-container {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: var(--branco-neve);
-}
-
-header .logo-container img {
-  width: 50px;
-  height: 50px;
-  object-fit: contain;
-  margin-right: 0.5rem;
-}
-
-header .logo-container h1 {
-  font-size: 1.2rem;
-  font-weight: 600;
-}
 
 .carrinho-header {
   grid-column: 1 / -1;
@@ -262,13 +206,13 @@ header .logo-container h1 {
 }
 
 .item-acoes button {
-  background: var(--branco-neve);
-  border: 1px solid var(--borda-erro);
-  color: var(--borda-erro);
+  background: var(--vermelho);
+  border: none;
+  color: var(--branco-neve);
   cursor: pointer;
   font-size: 0.85rem;
   transition: background 0.3s;
-  padding: 4px;
+  padding: 5px;
   border-radius: 8px;
   font-weight: bold;
 }
@@ -284,6 +228,7 @@ header .logo-container h1 {
 @media (max-width: 900px) {
   .carrinho-container {
     grid-template-columns: 1fr;
+    margin: 10px 10px;
   }
   .controle-quantidade {
     justify-content: center;
