--- a/assets/css/paginas/conta.css
+++ b/assets/css/paginas/conta.css
@@ -51,30 +51,11 @@ header .header-info {
   text-align: center;
 }
 
-<<<<<<< Updated upstream
-header .header-nav a {
-  font-size: 2rem;
-}
-
-header .header-nav a:hover {
-  background-color: rgba(255, 255, 255, 0.15);
-}
-
-header .header-info {
-  text-align: center;
-}
-
-.header-nav .carrinho-icone {
-  height: 32px;
-}
-
-=======
->>>>>>> Stashed changes
 /* =============================================
   LAYOUT PRINCIPAL (MOBILE FIRST)
 ============================================= */
 main {
-  max-width: 1100px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 1rem .3rem;
   display: flex;
@@ -168,6 +149,12 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
   gap: 1.5rem;
+  justify-items: center;
+}
+
+.produto-card {
+  max-width: 310px;
+  width: 100%;
 }
 
 /* =============================================
@@ -291,10 +278,6 @@ main {
   DASHBOARD — TELAS MAIORES
 ============================================= */
 @media (min-width: 992px) {
-  main {
-    padding: 3rem 1.5rem;
-  }
-
   .card-perfil {
     padding: 2.5rem;
     padding-bottom: 1.5rem;
