--- a/assets/css/paginas/conta.css
+++ b/assets/css/paginas/conta.css
@@ -142,6 +142,9 @@ main {
   margin-top: 1.5rem;
 }
 
+.btn-remover-foto {
+  margin-top: 10px;
+}
 /* =============================================
   PRODUTOS DO USUÁRIO
 ============================================= */
