--- a/assets/css/paginas/carrinho-page.css
+++ b/assets/css/paginas/carrinho-page.css
@@ -19,7 +19,8 @@ body {
 .carrinho-container {
   max-width: 1100px;
   margin: auto;
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   background-color: var(--branco-neve);
   border-radius: 14px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
